# geo-rank-ai

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  config.py  database.py  deps.py  dev_worker.py  main.py  models.py  requirements.txt  schemas.py  security.py  seed.py  start-dev.sh  start-prod.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260319_0001_initial_schema.py  20260319_0002_add_competitor_snapshots.py  20260323_0003_add_connector_implementation_key.py
backend/api/: dashboard.py  execution.py  prompts.py  root.py  runs.py  settings.py  system.py  workspaces.py
backend/external_plugins/demo_scraper/: pyproject.toml
backend/external_plugins/demo_scraper/src/georank_scraper_demo/: __init__.py  plugin.py
backend/plugins/: __init__.py  base.py  registry.py
backend/plugins/builtin/: __init__.py  openai_api.py
backend/services/: dashboard.py  execution.py  read_models.py  settings.py
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/prompts/: page.tsx
frontend/app/runs/: page.tsx
frontend/app/system/: page.tsx
frontend/components/: app-shell.tsx  dashboard-charts.tsx  prompts-manager.tsx  runs-manager.tsx  settings-manager.tsx  system-manager.tsx  theme-provider.tsx  workspace-provider.tsx
frontend/lib/: api.ts  app-events.ts
