[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "georank-scraper-demo"
version = "0.1.0"
description = "Demo external scraper plugin for GeoRank AI"
requires-python = ">=3.11"
dependencies = ["pydantic"]

[project.entry-points."georank.scrapers"]
demo_scraper = "georank_scraper_demo.plugin:get_plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
